--- a/css/main.css
+++ b/css/main.css
@@ -30,12 +30,16 @@
   list-style: none;
 }
 
-.header__box {
+.hero__box, .header__box {
   width: 1200px;
   padding-right: 15px;
   padding-left: 15px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.btn {
+  cursor: pointer;
 }
 
 .logo {
@@ -158,6 +162,52 @@
           align-items: center;
 }
 
+.hero {
+  padding-top: 200px;
+  padding-bottom: 200px;
+  text-align: center;
+  background-color: #c4c4c4;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
+  background-position: center;
+  background-size: 1600px 600px;
+  background-repeat: no-repeat;
+}
+
+.hero__title {
+  margin-bottom: 30px;
+  color: var(--alternative-accent-color);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+
+.btn {
+  font-family: var(--main-font);
+  font-size: 16px;
+}
+
+.hero__btn {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 32px;
+  padding-right: 32px;
+  background-color: var(--accent-font-color);
+  color: var(--alternative-accent-color);
+  font-weight: 700;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  border: none;
+  border-radius: 4px;
+  -webkit-transition: background-color var(--time-duration) var(--time-function);
+  transition: background-color var(--time-duration) var(--time-function);
+}
+.hero__btn:hover, .hero__btn:focus {
+  background-color: var(--main-btn-hover);
+}
+
 /* -------------------------Global styles -----------------*/
 body {
   font-family: var(--main-font);
@@ -199,79 +249,9 @@ button {
   margin-right: auto;
 }
 
-/* ---------------------------------- Header --------------*/
-.header {
-  border-bottom-color: var(--border-color);
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-}
-
-.header-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
 /* -------------------------- Hero ------------------------------*/
 .dark {
   background-color: var(--dark-background-color);
-}
-
-.hero {
-  text-align: center;
-  background-color: #c4c4c4;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero.jpg);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
-  background-position: center;
-  background-size: 1600px 600px;
-  background-repeat: no-repeat;
-}
-
-.hero-title {
-  margin-bottom: 30px;
-  color: var(--alternative-accent-color);
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-}
-
-.hero-content {
-  padding-top: 200px;
-  padding-bottom: 200px;
-}
-
-.btn {
-  font-family: var(--main-font);
-  font-size: 16px;
-}
-
-.hero-btn {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 32px;
-  padding-right: 32px;
-  background-color: var(--accent-font-color);
-  color: var(--alternative-accent-color);
-  font-weight: 700;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  border: none;
-  border-radius: 4px;
-  -webkit-transition: background-color var(--time-duration) var(--time-function);
-  transition: background-color var(--time-duration) var(--time-function);
-}
-
-.hero-btn:hover,
-.hero-btn:focus {
-  background-color: var(--main-btn-hover);
 }
 
 /* ---------------------------- Advantages ----------------------*/
