--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,6 +33,8 @@
 @import './components/navigation';
 @import './components/header-contacts';
 @import './components/header';
+@import './components/hero';
+@import './components/button';
 
 /* -------------------------Global styles -----------------*/
 body {
@@ -67,8 +69,6 @@ button {
     cursor: pointer;
 }
 
-
-
 .container {
     width: 1200px;
     padding-right: 15px;
@@ -77,76 +77,9 @@ button {
     margin-right: auto;
 }
 
-
-/* ---------------------------------- Header --------------*/
-.header {
-    border-bottom-color: var(--border-color);
-    border-bottom-width: 1px;
-    border-bottom-style: solid;
-}
-
-.header-box {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
 /* -------------------------- Hero ------------------------------*/
 .dark {
     background-color: var(--dark-background-color);
-}
-
-.hero {
-    text-align: center;
-    background-color: #c4c4c4;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
-    background-position: center;
-    background-size: 1600px 600px;
-    background-repeat: no-repeat;
-}
-
-.hero-title {
-    margin-bottom: 30px;
-
-    color: var(--alternative-accent-color);
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-}
-
-.hero-content {
-    padding-top: 200px;
-    padding-bottom: 200px;
-}
-
-.btn {
-    font-family: var(--main-font);
-    font-size: 16px;
-}
-
-.hero-btn {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 32px;
-    padding-right: 32px;
-
-    background-color: var(--accent-font-color);
-    color: var(--alternative-accent-color);
-    font-weight: 700;
-    line-height: 1.88;
-    letter-spacing: 0.06em;
-    border: none;
-    border-radius: 4px;
-
-    transition: background-color var(--time-duration) var(--time-function);
-}
-
-.hero-btn:hover,
-.hero-btn:focus {
-    background-color: var(--main-btn-hover);
-
 }
 
 /* ---------------------------- Advantages ----------------------*/
