--- a/sass/main.scss
+++ b/sass/main.scss
@@ -35,6 +35,9 @@
 @import './components/header';
 @import './components/hero';
 @import './components/button';
+@import './components/advantage';
+@import './components/advantage-icon';
+@import './components/advantage-item';
 
 /* -------------------------Global styles -----------------*/
 body {
@@ -69,13 +72,7 @@ button {
     cursor: pointer;
 }
 
-.container {
-    width: 1200px;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-left: auto;
-    margin-right: auto;
-}
+
 
 /* -------------------------- Hero ------------------------------*/
 .dark {
@@ -83,75 +80,9 @@ button {
 }
 
 /* ---------------------------- Advantages ----------------------*/
-.visually-hidden {
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
-}
 
-.title {
-    color: var(--secondary-font-color);
-    font-size: 36px;
-    line-height: 1.17;
-}
 
-.advantage-icon-bg {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 270px;
-    height: 120px;
 
-    background-color: var(--secondary-background-color);
-    color: var(--secondary-font-color);
-    margin-bottom: 30px;
-    border-radius: 4px;
-}
-
-.advantage-icon {
-    width: 70px;
-    height: 70px;
-    fill: currentColor;
-}
-
-.advantage-list {
-    display: flex;
-
-}
-
-.section {
-    padding-top: 94px;
-    padding-bottom: 94px;
-}
-
-.advantage {
-    margin-bottom: 10px;
-
-    font-size: 14px;
-    line-height: 1.14;
-    text-transform: uppercase;
-}
-
-.advantage-desc {
-    font-size: 14px;
-    line-height: 1.71;
-    font-style: normal;
-}
-
-.advantage-item {
-    width: calc((1170 - 3*30)/4);
-}
-
-.advantage-item:not(:last-child) {
-    margin-right: 30px;
-}
 
 .social-links {
     display: flex;
