--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -17,3 +17,27 @@
 %button{
     cursor: pointer;
 }
+
+%visually-hidden{
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
+
+%section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+%title {
+    color: var(--secondary-font-color);
+    font-size: 36px;
+    line-height: 1.17;
+}
