--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,7 @@ img {
   margin: -1px;
 }
 
-.clients-section, .team-section, .do-section, .advantage {
+.clients-section, .team-section, .advantage {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -418,6 +418,7 @@ img {
 }
 
 .do-section {
+  padding-bottom: 94px;
   text-align: center;
 }
 
@@ -851,8 +852,14 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-bottom: 30px;
   padding-left: 12px;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
 }
 
 .custom-checkbox__icon {
