--- a/sass/components/_custom-checkbox.scss
+++ b/sass/components/_custom-checkbox.scss
@@ -3,9 +3,14 @@
 
     display: flex;
     align-items: center;
+    justify-content: center;
 
     margin-bottom: 30px;
     padding-left: 12px;
+
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
 }
 
 .custom-checkbox__icon {
